--- a/components/pages/main/About/AboutText/AboutText.module.scss
+++ b/components/pages/main/About/AboutText/AboutText.module.scss
@@ -46,7 +46,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-weight: 700;
+            font-weight: 600;
             font-size: 12px;
             line-height: 140%;
             text-transform: uppercase;
@@ -75,6 +75,7 @@
                 font-size: 10px;
             }
             &:hover{
+                color: $orange;
                 text-decoration: none;
             }
         }
