--- a/components/pages/main/Benefits/Benefits.module.scss
+++ b/components/pages/main/Benefits/Benefits.module.scss
@@ -47,7 +47,7 @@
             max-width: 196px;
             width: 100%;
             height: 45px;
-            font-weight: 700;
+            font-weight: 600;
             font-size: 12px;
             line-height: 140%;
             text-transform: uppercase;
@@ -56,6 +56,9 @@
             transition: 0.2s;
             @media only screen and (max-width: $mobile) {
                 max-width: 100%;
+            }
+            &:hover{
+                background: #eb1f2a;
             }
         }
         
