--- a/components/pages/main/Contacts/ContactsForm/ContactsForm.module.scss
+++ b/components/pages/main/Contacts/ContactsForm/ContactsForm.module.scss
@@ -47,6 +47,10 @@
             a{
                 color: #CCCCCC;
                 text-decoration: underline;
+                transition: 0.2s;
+                &:hover{
+                    text-decoration: none;
+                }
             }
 
             input[type="checkbox"]{
@@ -119,7 +123,7 @@
             width: 100%;
             background: white;
             color: $swamp;
-            font-weight: 700;
+            font-weight: 600;
             font-size: 12px;
             line-height: 140%;
             text-transform: uppercase;
