--- a/components/pages/main/Gallery/Gallery.module.scss
+++ b/components/pages/main/Gallery/Gallery.module.scss
@@ -30,7 +30,7 @@
             min-width: 158px;
             width: 100%;
             height: 45px;
-            font-weight: 700;
+            font-weight: 600;
             font-size: 12px;
             line-height: 140%;
             text-transform: uppercase;
@@ -72,7 +72,7 @@
                 min-width: 158px;
                 width: 100%;
                 height: 45px;
-                font-weight: 700;
+                font-weight: 600;
                 font-size: 12px;
                 line-height: 140%;
                 text-transform: uppercase;
@@ -97,8 +97,9 @@
             .activeTab{
                 background: white;
                 color: black;
+                border: 1px solid white;
                 &:hover{
-                    background: $orange;
+                    background: inherit;
                     color: white;
                 }
             }
