--- a/components/pages/main/News/NewsSlider/NewsSlider.module.scss
+++ b/components/pages/main/News/NewsSlider/NewsSlider.module.scss
@@ -45,6 +45,18 @@
 .slider{
     position: absolute;
     max-width: 100%;
+
+    .links{
+        transition: 0.2s;
+        &:hover{
+            .slide > .period > .btn{
+                color: $orange;
+                &::after{
+                    background: $orange;
+                }
+            }
+        }
+    }
     
     .slide{
         background: $swamp;
@@ -63,6 +75,8 @@
             padding-left: 10px;
             padding-right: 10px;
         }
+
+        
 
         .date{
             font-weight: 500;
@@ -90,6 +104,7 @@
             margin-bottom: 20px;
             max-width: 405px;
             width: 100%;
+            color: white;
             @media only screen and (max-width: $mobile) {
                 font-size: 16px;
                 line-height: 130%;
@@ -109,6 +124,7 @@
             max-width: 405px;
             width: 100%;
             font-family: $fontDop;
+            color: white;
             @media only screen and (max-width: $mobile) {
                 font-size: 16px;
                 line-height: 130%;
@@ -169,7 +185,7 @@
                 }
             }
 
-            a{
+            .btn{
                 font-weight: 500;
                 font-size: 14px;
                 line-height: 140%;
@@ -187,9 +203,13 @@
                     background: white;
                     left: 0;
                     bottom: -2px;
+                    transition: 0.2s;
                 }
                 &:hover{
                     color: $orange;
+                    &::after{
+                        background: $orange;
+                    }
                 }
                 @media only screen and (max-width: $mobile) {
                     font-size: 10px;
