--- a/components/pages/main/Products/Products.module.scss
+++ b/components/pages/main/Products/Products.module.scss
@@ -22,6 +22,9 @@
         .casting{
             align-items: flex-end;
             justify-content: space-between;
+            .castingBlock{
+                width: 100%;
+            }
         }
 
         .hotchannel, .casting{
