--- a/components/pages/main/Questions/Questions.module.scss
+++ b/components/pages/main/Questions/Questions.module.scss
@@ -32,7 +32,7 @@
             width: 100%;
             height: 45px;
             background: $orange;
-            font-weight: 700;
+            font-weight: 600;
             font-size: 12px;
             line-height: 140%;
             text-transform: uppercase;
@@ -43,6 +43,9 @@
                 position: absolute;
                 bottom: 60px;
                 max-width: calc(100% - 40px);
+            }
+            &:hover{
+                background: #eb1f2a;
             }
         }
         
