--- a/components/pages/main/Start/Start.module.scss
+++ b/components/pages/main/Start/Start.module.scss
@@ -8,8 +8,11 @@
         width: 100%;
         display: flex;
         position: relative;
+        min-height: calc(100vh - 99px);
+        max-height: calc(100vh - 99px);
         @media only screen and (max-width: $mobile) {
-            min-height: 540px;
+            min-height: calc(100vh - 130px);
+            max-height: calc(100vh - 130px);
         }
     }
 
@@ -21,8 +24,8 @@
         width: 100%;
         min-height: 231px;
         @media only screen and (max-width: $mobile) {
-            min-height: 123px;
-            bottom: 52px;
+            min-height: 105px;
+            bottom: 50px;
         }
 
         .title{
@@ -35,7 +38,7 @@
             display: flex;
             flex-direction: column;
             @media only screen and (max-width: $mobile) {
-                font-size: 34px;
+                font-size: 29px;
                 line-height: 120%;
             }
 
