--- a/components/pages/main/About/About.module.scss
+++ b/components/pages/main/About/About.module.scss
@@ -8,6 +8,13 @@
     padding-top: 90px;
     padding-bottom: 450px;
   }
+  @media only screen and (max-width: 415px) {
+    padding-bottom: 500px;
+  }
+  @media only screen and (max-width: 413px) {
+    padding-bottom: 450px;
+  }
+
 
   .aboutFirst{
     display: flex;
