--- a/components/pages/main/Gallery/Gallery.module.scss
+++ b/components/pages/main/Gallery/Gallery.module.scss
@@ -47,22 +47,11 @@
 
         }
 
-        .btn{
-            position: initial;
-            @media only screen and (max-width: $mobile) {
-                position: absolute;
-                bottom: 0px;
-                max-width: calc(100% - 40px);
-                left: 20px;
-                right: 20px;
-            }
-        }
-
         .tabs{
             display: flex;
             justify-content: space-between;
             align-items: center;
-            
+    
             button{
                 cursor: pointer;
                 transition: 0.2s;
@@ -81,8 +70,6 @@
                     min-width: 88px;
                 }
             }
-            
-            
 
             .default{
                 background: inherit;
@@ -115,7 +102,49 @@
         @media only screen and (max-width: $mobile) {
             margin-bottom: 30px;
         }
+
+        button{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-width: 158px;
+            width: 100%;
+            height: 45px;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 140%;
+            text-transform: uppercase;
+            font-family: $fontDop;
+            background: white;
+            color: black;
+            max-width: 172px;
+            transition: 0.2s;
+            cursor: pointer;
+            &:hover{
+                background: $orange;
+                color: white;
+            }
+        }
+
+        .btn{
+            position: initial;
+
+            @media only screen and (max-width: $mobile) {
+                position: absolute;
+                bottom: 0px;
+                max-width: calc(100% - 40px);
+                left: 20px;
+                right: 20px;
+            }
+        }
+
     }
+}
+
+.block{
+    display: flex;
+    gap: 30px;
+    align-items: flex-end;
 
     .pagination{
         display: flex;
@@ -136,8 +165,7 @@
         .paginationAll{
             color: #CCCCCC;
         }
-        
-    }
+    }   
 
     .btns{
         display: flex;
@@ -156,7 +184,8 @@
             justify-content: center;
             background: inherit;
             border: 1px solid white;
-            width: 56px;
+            max-width: 56px;
+            min-width: 56px;
             height: 56px;
             transition: 0.2s;
             &:hover{
@@ -168,16 +197,10 @@
                 }
             }
             @media only screen and (max-width: $mobile) {
-                width: 45px;
+                min-width: 45px;
                 height: 45px;
+                max-width: 45px;
             }
         }
-
     }
-}
-
-.block{
-    display: flex;
-    gap: 30px;
-    align-items: flex-end;
 }
