--- a/components/pages/main/Benefits/Benefits.module.scss
+++ b/components/pages/main/Benefits/Benefits.module.scss
@@ -8,6 +8,45 @@
         padding-bottom: 40px;
     }
 
+    .title{
+        position: relative;
+        max-width: 100%;
+        width: 100%;
+    
+        .line{
+            position: absolute;
+            left: -360px;
+            background: $orange;
+            width: calc(603px + 360px);
+            height: 1px;
+            top: -20px;
+            @media only screen and (max-width: $mobile) {
+                top: -10px;
+                width: calc(362px + 360px);
+            }
+            @media only screen and (max-width: 413px) {
+                top: -10px;
+                width: calc(184px + 360px);
+            }
+        }
+        
+        h2{
+            font-family: $fontMain;
+            color: white;
+            font-weight: 400;
+            font-size: 48px;
+            line-height: 71px;
+            max-width: fit-content;
+            text-transform: uppercase;
+            @media only screen and (max-width: $mobile) {
+                font-size: 28px;
+                line-height: 41px;
+                padding-left: 10px;
+            }
+        }
+    
+    }
+
     .wrap{
         margin-top: 50px;
         display: flex;
